[tool.poetry]
name = "glyhunter"
version = "0.1.6"
description = ""
authors = ["fubin1999 <65430559+fubin1999@users.noreply.github.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
pyyaml = "^6.0.1"
click = "^8.1.7"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pytest-mock = "^3.12.0"


[tool.poetry.group.streamlit.dependencies]
streamlit = "^1.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
glyhunter = "glyhunter.cli:cli"
